--- a/sager/pom.xml
+++ b/sager/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.gdd.sage</groupId>
+            <artifactId>sage-jena-databases</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
