--- a/sager/src/main/resources/simplelogger.properties
+++ b/sager/src/main/resources/simplelogger.properties
@@ -1,3 +1,4 @@
 org.slf4j.simpleLogger.defaultLogLevel = error
 
 org.slf4j.simpleLogger.log.fr.gdd.sage.sager.SagerOpExecutorTest = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.sager.Save2SPARQLTest = debug
