wip, bug with join triples to bgp.

--- a/sager/src/main/resources/simplelogger.properties
+++ b/sager/src/main/resources/simplelogger.properties
@@ -1,5 +1,5 @@
 org.slf4j.simpleLogger.defaultLogLevel = error
 
 org.slf4j.simpleLogger.log.fr.gdd.sage.sager.SagerOpExecutorTest = debug
-org.slf4j.simpleLogger.log.fr.gdd.sage.sager.Save2SPARQLTest = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.sager.pause.Save2SPARQLTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.sager.optimizers.Offset2Skip = debug
