--- a/sager/src/main/resources/simplelogger.properties
+++ b/sager/src/main/resources/simplelogger.properties
@@ -2,4 +2,5 @@ org.slf4j.simpleLogger.defaultLogLevel = error
 
 org.slf4j.simpleLogger.log.fr.gdd.sage.sager.SagerOpExecutorTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.sager.pause.Save2SPARQLTest = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.sager.pause.Save2SPARQLBGPTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.sager.optimizers.Offset2Skip = debug
